--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   >
     <a-assets>
       <video id="goldRingVideo" src="Pungai Tree.mp4" playsinline loop></video>
+      <img id="logoImage" src="4k.png" />
     </a-assets>
 
     <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
