--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     device-orientation-permission-ui="enabled: false"
   >
     <a-assets>
-      <video id="goldRingVideo" src="gold rings.mp4" playsinline loop></video>
+      <video id="goldRingVideo" src="Pungai Tree.mp4" playsinline loop></video>
     </a-assets>
 
     <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
